--- a/notes/day1-basic-principles.Rmd
+++ b/notes/day1-basic-principles.Rmd
@@ -5,6 +5,11 @@ output:
   github_document:
     toc: true
     toc_depth: 3
+  html_document:
+    toc: true
+    toc_float: true
+    theme: readable
+    highlight: pygments
 ---
 
 ```{r setup, include = FALSE}
