Reorganize day 1 notes/slides and move extra material to day 2

--- a/notes/day1-slides.Rmd
+++ b/notes/day1-slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic principles of data visualization"
+title: "Introduction to data visualization"
 author: |
   | MACS 40700
   | University of Chicago
